--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="A community-powered governance dApp for users of Ethfinex."/>
-  <meta name="keywords" content="bitcoin, bitfinex, community, cryptocurrencies, ethereum, ethfinex, nectar token, NEC, DApp, exchange tokens, ethereum governance, decentralised application"/>
+  <meta name="description" content="A community-powered governance dApp for users of Ethfinex." />
+  <meta name="keywords"
+    content="bitcoin, bitfinex, community, cryptocurrencies, ethereum, ethfinex, nectar token, NEC, DApp, exchange tokens, ethereum governance, decentralised application" />
 
   <title>Nectar Community</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT" rel="stylesheet">
 </head>
+
 <body>
   <div id="root"></div>
 </body>
+
 </html>
